<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ParseChat</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hintet">write a message</string>
    <string name="buttontext">Send</string>
    <string name="title_activity_choose_user">ChooseUser</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="refresh">Refresh messages</string>
    

</resources>
