<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ParseChatActivity" >

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etMensaje"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/tvTitulo"
        android:text="@string/buttontext" />

    <EditText
        android:id="@+id/etMensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnRefreshMsg"
        android:layout_alignLeft="@+id/chatList"
        android:layout_alignRight="@+id/btnRefreshMsg"
        android:ems="10"
        android:hint="@string/hintet" />

    <Button
        android:id="@+id/btnRefreshMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnSend"
        android:layout_alignBottom="@+id/btnSend"
        android:layout_alignRight="@+id/chatList"
        android:text="@string/refresh" />

    <ListView
        android:id="@+id/chatList"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/tvTitulo"
        android:layout_centerHorizontal="true" >
    </ListView>

</RelativeLayout>